--- a/layers/pois.yaml
+++ b/layers/pois.yaml
@@ -9,10 +9,10 @@ textures:
             # define sprites: [x origin, y origin, width, height]
             airport: [830, 0, 36, 36]
             aerodrome: [830, 0, 36, 36]
-            aquarium: [574, 168, 36, 36]
-            art-gallery: [486, 168, 36, 36]
-            art_gallery: [486, 168, 36, 36]
-            art: [486, 168, 36, 36]
+            aquarium: [618, 168, 36, 36]
+            art-gallery: [530, 168, 36, 36]
+            art_gallery: [530, 168, 36, 36]
+            art: [530, 168, 36, 36]
             athletics-sports: [88, 168, 36, 36]
             pitch: [88, 168, 36, 36]
             athletic_sports: [88, 168, 36, 36]
@@ -22,18 +22,18 @@ textures:
             car_repair: [904, 126, 36, 36]
             automotive: [904, 126, 36, 36]
             tyres: [904, 126, 36, 36]
-            bakery: [398, 168, 36, 36]
-            pastry: [398, 168, 36, 36]
-            chocolate: [398, 168, 36, 36]
+            bakery: [442, 168, 36, 36]
+            pastry: [442, 168, 36, 36]
+            chocolate: [442, 168, 36, 36]
             bank: [860, 126, 36, 36]
             bar: [134, 168, 36, 36]
             pub: [134, 168, 36, 36]
             baseball-field: [446, 84, 36, 36]
             basketball-court: [402, 84, 36, 36]
             beach: [580, 84, 36, 36]
-            beer-garden: [88, 210, 36, 36]
-            biergarten: [88, 210, 36, 36]
-            brewery: [88, 210, 36, 36]
+            beer-garden: [132, 210, 36, 36]
+            biergarten: [132, 210, 36, 36]
+            brewery: [132, 210, 36, 36]
             bench: [522, 0, 36, 36]
             bicycle-parking: [542, 126, 36, 36]
             bike-shop: [770, 126, 36, 36]
@@ -52,16 +52,16 @@ textures:
             books: [724, 126, 36, 36]
             bridge: [844, 84, 36, 36]
             buddhism: [712, 84, 36, 36]
-            building: [266, 168, 36, 36]
-            auditorium: [266, 168, 36, 36]
-            terminal: [266, 168, 36, 36]
-            hangar: [266, 168, 36, 36]
-            retirement_home: [266, 168, 36, 36]
-            manor: [266, 168, 36, 36]
-            recreation_center: [266, 168, 36, 36]
-            apartments: [266, 168, 36, 36]
-            burger: [972, 168, 36, 36]
-            fast_food: [972, 168, 36, 36]
+            building: [310, 168, 36, 36]
+            auditorium: [310, 168, 36, 36]
+            terminal: [310, 168, 36, 36]
+            hangar: [310, 168, 36, 36]
+            retirement_home: [310, 168, 36, 36]
+            manor: [310, 168, 36, 36]
+            recreation_center: [310, 168, 36, 36]
+            apartments: [310, 168, 36, 36]
+            burger: [0, 210, 36, 36]
+            fast_food: [0, 210, 36, 36]
             bus-station: [742, 0, 36, 36]
             bus_stop: [742, 0, 36, 36]
             bus_station: [742, 0, 36, 36]
@@ -69,14 +69,14 @@ textures:
             campground: [756, 84, 36, 36]
             camp_site: [756, 84, 36, 36]
             caravan_site: [756, 84, 36, 36]
-            candy-store: [840, 168, 36, 36]
-            candy: [840, 168, 36, 36]
-            confectionery: [840, 168, 36, 36]
-            capital-l: [322, 212, 16, 16]
-            capital-m: [302, 212, 12, 12]
-            capital-s: [282, 212, 10, 10]
-            capital-xl: [374, 212, 20, 20]
-            capital-xs: [268, 212, 8, 8]
+            candy-store: [884, 168, 36, 36]
+            candy: [884, 168, 36, 36]
+            confectionery: [884, 168, 36, 36]
+            capital-l: [366, 212, 16, 16]
+            capital-m: [346, 212, 12, 12]
+            capital-s: [326, 212, 10, 10]
+            capital-xl: [418, 212, 20, 20]
+            capital-xs: [312, 212, 8, 8]
             car-dealership: [680, 126, 36, 36]
             car: [680, 126, 36, 36]
             castle: [354, 42, 36, 36]
@@ -84,15 +84,15 @@ textures:
             cemetery: [668, 84, 36, 36]
             grave_yard: [668, 84, 36, 36]
             church: [136, 126, 36, 36]
-            clothing-store: [662, 168, 36, 36]
-            clothes: [662, 168, 36, 36]
-            chothing-store: [662, 168, 36, 36]
-            fashion: [662, 168, 36, 36]
-            coffee-shop: [354, 168, 36, 36]
-            cafe: [354, 168, 36, 36]
-            college-university: [708, 168, 36, 36]
-            university: [708, 168, 36, 36]
-            college: [708, 168, 36, 36]
+            clothing-store: [706, 168, 36, 36]
+            clothes: [706, 168, 36, 36]
+            chothing-store: [706, 168, 36, 36]
+            fashion: [706, 168, 36, 36]
+            coffee-shop: [398, 168, 36, 36]
+            cafe: [398, 168, 36, 36]
+            college-university: [752, 168, 36, 36]
+            university: [752, 168, 36, 36]
+            college: [752, 168, 36, 36]
             convenience-store: [0, 84, 36, 36]
             convenience: [0, 84, 36, 36]
             convenience_store: [0, 84, 36, 36]
@@ -100,12 +100,22 @@ textures:
             courthouse: [348, 0, 36, 36]
             department-store: [634, 126, 36, 36]
             department_store: [634, 126, 36, 36]
-            drinking-water: [44, 210, 36, 36]
+            drinking-water: [88, 210, 36, 36]
             dry-cleaning: [942, 42, 36, 36]
             dry_cleaning: [942, 42, 36, 36]
             electronics-store: [496, 126, 36, 36]
             electronics: [496, 126, 36, 36]
             computer: [496, 126, 36, 36]
+            factory: [266, 168, 36, 36]
+            industrial: [266, 168, 36, 36]
+            chimney: [266, 168, 36, 36]
+            sub_station: [266, 168, 36, 36]
+            substation: [266, 168, 36, 36]
+            wastewater_plant: [266, 168, 36, 36]
+            works: [266, 168, 36, 36]
+            water_works: [266, 168, 36, 36]
+            plant: [266, 168, 36, 36]
+            generator: [266, 168, 36, 36]
             fire-station: [304, 0, 36, 36]
             fire_station: [304, 0, 36, 36]
             fitness: [806, 42, 36, 36]
@@ -113,15 +123,15 @@ textures:
             fitness_center: [806, 42, 36, 36]
             flower-shop: [90, 126, 36, 36]
             florist: [90, 126, 36, 36]
-            forest: [886, 168, 36, 36]
-            conservation: [886, 168, 36, 36]
-            nature_reserve: [886, 168, 36, 36]
+            forest: [930, 168, 36, 36]
+            conservation: [930, 168, 36, 36]
+            nature_reserve: [930, 168, 36, 36]
             fountain: [224, 126, 36, 36]
             garden: [624, 84, 36, 36]
-            gas-station: [796, 168, 36, 36]
-            fuel: [796, 168, 36, 36]
-            generic: [222, 210, 36, 36]
-            subway_entrance: [222, 210, 36, 36]
+            gas-station: [840, 168, 36, 36]
+            fuel: [840, 168, 36, 36]
+            generic: [266, 210, 36, 36]
+            subway_entrance: [266, 210, 36, 36]
             gift-shop: [44, 126, 36, 36]
             gift: [44, 126, 36, 36]
             golf-course: [356, 84, 36, 36]
@@ -149,10 +159,10 @@ textures:
             hotel: [698, 0, 36, 36]
             motel: [698, 0, 36, 36]
             hostel: [698, 0, 36, 36]
-            ice-cream-shop: [132, 210, 36, 36]
-            ice_cream: [132, 210, 36, 36]
-            information: [176, 210, 36, 36]
-            info: [176, 210, 36, 36]
+            ice-cream-shop: [176, 210, 36, 36]
+            ice_cream: [176, 210, 36, 36]
+            information: [220, 210, 36, 36]
+            info: [220, 210, 36, 36]
             jewelry-store: [670, 42, 36, 36]
             jewelry: [670, 42, 36, 36]
             jewelry_store: [670, 42, 36, 36]
@@ -187,9 +197,9 @@ textures:
             mosque: [88, 0, 36, 36]
             mountain: [178, 84, 36, 36]
             peak: [178, 84, 36, 36]
-            movie-theatre: [618, 168, 36, 36]
-            cinema: [618, 168, 36, 36]
-            movie-theater: [618, 168, 36, 36]
+            movie-theatre: [662, 168, 36, 36]
+            cinema: [662, 168, 36, 36]
+            movie-theater: [662, 168, 36, 36]
             museum: [976, 84, 36, 36]
             observatory: [976, 84, 36, 36]
             music-store: [308, 42, 36, 36]
@@ -206,9 +216,9 @@ textures:
             optical_shop: [220, 42, 36, 36]
             park: [180, 126, 36, 36]
             parking: [588, 126, 36, 36]
-            performing-arts: [442, 168, 36, 36]
-            theater: [442, 168, 36, 36]
-            theatre: [442, 168, 36, 36]
+            performing-arts: [486, 168, 36, 36]
+            theater: [486, 168, 36, 36]
+            theatre: [486, 168, 36, 36]
             pet-store: [176, 42, 36, 36]
             pet: [176, 42, 36, 36]
             pet-service: [176, 42, 36, 36]
@@ -235,8 +245,8 @@ textures:
             rental-car: [566, 0, 36, 36]
             car_rental: [566, 0, 36, 36]
             car_sharing: [566, 0, 36, 36]
-            restaurant: [930, 168, 36, 36]
-            deli: [930, 168, 36, 36]
+            restaurant: [974, 168, 36, 36]
+            deli: [974, 168, 36, 36]
             ruin: [478, 0, 36, 36]
             ruins: [478, 0, 36, 36]
             archaeological_site: [478, 0, 36, 36]
@@ -270,53 +280,53 @@ textures:
             theme_park: [932, 84, 36, 36]
             miniature_golf: [932, 84, 36, 36]
             toilets: [800, 84, 36, 36]
-            townspot-l: [566, 210, 18, 18]
-            townspot-l-rev: [454, 212, 16, 16]
-            townspot-m: [544, 210, 14, 14]
-            townspot-m-rev: [434, 212, 12, 12]
-            townspot-s: [524, 210, 12, 12]
-            townspot-s-rev: [416, 212, 10, 10]
-            townspot-xl: [592, 210, 22, 22]
-            townspot-xl-rev: [478, 212, 20, 20]
-            townspot-xs: [506, 210, 10, 10]
-            townspot-xs-rev: [402, 212, 6, 6]
+            townspot-l: [610, 210, 18, 18]
+            townspot-l-rev: [498, 212, 16, 16]
+            townspot-m: [588, 210, 14, 14]
+            townspot-m-rev: [478, 212, 12, 12]
+            townspot-s: [568, 210, 12, 12]
+            townspot-s-rev: [460, 212, 10, 10]
+            townspot-xl: [636, 210, 22, 22]
+            townspot-xl-rev: [522, 212, 20, 20]
+            townspot-xs: [550, 210, 10, 10]
+            townspot-xs-rev: [446, 212, 6, 6]
             toy-game-store: [872, 0, 36, 36]
             toys: [872, 0, 36, 36]
             baby_goods: [872, 0, 36, 36]
-            traffic-signal: [752, 168, 36, 36]
-            traffic_signals: [752, 168, 36, 36]
+            traffic-signal: [796, 168, 36, 36]
+            traffic_signals: [796, 168, 36, 36]
             train-station: [392, 0, 36, 36]
             station: [392, 0, 36, 36]
             train-staion: [392, 0, 36, 36]
-            ux-current-location: [916, 210, 88, 88]
-            current-location: [916, 210, 88, 88]
-            ux-locate-off: [240, 342, 72, 72]
-            locate-off: [240, 342, 72, 72]
-            ux-locate-on: [160, 342, 72, 72]
-            locate-on: [160, 342, 72, 72]
-            ux-route-arrow: [622, 210, 128, 128]
-            route-arrow: [622, 210, 128, 128]
-            ux-route-start: [836, 210, 72, 92]
-            route-start: [836, 210, 72, 92]
-            ux-route-stop: [758, 210, 72, 92]
-            route-stop: [758, 210, 72, 92]
-            ux-search-active: [0, 342, 72, 108]
-            search-active: [0, 342, 72, 108]
-            ux-search-inactive: [80, 342, 72, 108]
-            search-inactive: [80, 342, 72, 108]
-            ux-transit-stop: [346, 212, 20, 20]
+            ux-current-location: [0, 342, 88, 88]
+            current-location: [0, 342, 88, 88]
+            ux-locate-off: [334, 342, 72, 72]
+            locate-off: [334, 342, 72, 72]
+            ux-locate-on: [254, 342, 72, 72]
+            locate-on: [254, 342, 72, 72]
+            ux-route-arrow: [666, 210, 128, 128]
+            route-arrow: [666, 210, 128, 128]
+            ux-route-start: [880, 210, 72, 92]
+            route-start: [880, 210, 72, 92]
+            ux-route-stop: [802, 210, 72, 92]
+            route-stop: [802, 210, 72, 92]
+            ux-search-active: [94, 342, 72, 108]
+            search-active: [94, 342, 72, 108]
+            ux-search-inactive: [174, 342, 72, 108]
+            search-inactive: [174, 342, 72, 108]
+            ux-transit-stop: [390, 212, 20, 20]
             veterinarian: [132, 0, 36, 36]
             pet_care: [132, 0, 36, 36]
             veterinary: [132, 0, 36, 36]
-            view-point: [530, 168, 36, 36]
-            viewpoint: [530, 168, 36, 36]
-            view_point: [530, 168, 36, 36]
-            vista: [530, 168, 36, 36]
+            view-point: [574, 168, 36, 36]
+            viewpoint: [574, 168, 36, 36]
+            view_point: [574, 168, 36, 36]
+            vista: [574, 168, 36, 36]
             vineyard: [948, 126, 36, 36]
             volcano: [46, 84, 36, 36]
-            wine-bar: [0, 210, 36, 36]
-            winery: [310, 168, 36, 36]
-            wine: [310, 168, 36, 36]
+            wine-bar: [44, 210, 36, 36]
+            winery: [354, 168, 36, 36]
+            wine: [354, 168, 36, 36]
             zoo: [888, 84, 36, 36]
 
 layers:
@@ -724,14 +734,14 @@ layers:
                     filter: { kind: hospital }
                     draw: { icons: { text: { font: { fill: [0.932,0.737,0.932] } } } }
                 courthouse:
-                    filter: { kind: [courthouse,library,museum,post_office,police,embassy,bank,observatory,recycling,information,bicycle_rental_station,fire_station,townhall,assisted_living,group_home,community_centre,attraction,artwork,sports_centre,historical,fitness_station,drinking_water,ngo,plumber,lawyer,it,doctors,guest_house,clinic,shelter,social_facility] }
+                    filter: { kind: [courthouse,library,museum,post_office,police,embassy,bank,observatory,recycling,information,bicycle_rental_station,fire_station,townhall,assisted_living,group_home,community_centre,attraction,artwork,sports_centre,historical,fitness_station,drinking_water,ngo,plumber,lawyer,it,doctors,guest_house,clinic,shelter,social_facility,government,post_box,research] }
                     draw: { icons: { text: { font: { fill: [0.149,0.871,0.992] } } } }
                 school:
                     filter: { kind: [school,university,kindergarten,college] }
                     draw: { icons: { text: { font: { fill: [0.461,0.885,0.980] } } } }
                     # draw: { icons: { text: { font: { fill: [0.334,0.726,0.814] } } } }
                 retail:
-                    filter: { kind: [books,computer,outdoor,supermarket,department_store,electronics,mall,clothes,toys,fashion,jewelry,convenience,gift,music,bicycle,alcohol,sports,florist,mobile_phone,tailor,bicycle_rental,hardware,retail] }
+                    filter: { kind: [books,computer,outdoor,supermarket,department_store,electronics,mall,clothes,toys,fashion,jewelry,convenience,gift,music,bicycle,alcohol,sports,florist,mobile_phone,tailor,bicycle_rental,hardware,retail,confectionery,greengrocer] }
                     draw: { icons: { text: { font: { fill: [1.000,0.714,0.976] } } } }
                 place-of-worship:
                     filter: { kind: [place_of_worship,cemetery] }
@@ -755,13 +765,13 @@ layers:
                     filter: { kind: [bridge,toilets,fuel,optician,car,car_repair] }
                     draw: { icons: { text: { font: { fill: [0.851,0.796,0.851] } } } }
                 garden:
-                    filter: { kind: [garden,playground,zoo,camp_site] }
+                    filter: { kind: [garden,playground,zoo,camp_site,marina] }
                     draw: { icons: { text: { font: { fill: [0.345,0.953,0.769] } } } }
                 vet:
                     filter: { kind: [veterinary,pet,pet_store] }
                     draw: { icons: { text: { font: { fill: [0.838,0.815,0.970] } } } }
                 hairdresser:
-                    filter: { kind: [hairdresser,laundry] }
+                    filter: { kind: [hairdresser,laundry,dry_cleaning] }
                     draw: { icons: { text: { font: { fill: [0.988,0.851,0.820] } } } }
                 airport:
                     filter: { kind: [aerodrome] }
