region boundaries start at z5

--- a/layers/boundaries.yaml
+++ b/layers/boundaries.yaml
@@ -34,7 +34,7 @@ layers:
             draw:
                 lines:
                     color: black
-                    width: [[0, 0px], [5, 0px], [6, 0.5px], [8, 1px], [14, 1.5px], [16, 3.0px], [17, 10m]]
+                    width: [[0, 0px], [4, 0px], [5, 0.5px], [6, 0.5px], [8, 1px], [14, 1.5px], [16, 3.0px], [17, 10m]]
             water:
                 filter: { maritime_boundary: yes }
                 draw:
